# rtx_compute_samples

./: CMakeLists.txt  LICENSE  README.md
CMake/: FindOptiX7.cmake  PTXUtilities.cmake
common/: OBJ.cpp  OBJ.h  Timer.h  common.cpp  common.h  tiny_obj_loader.h  vec_func.cuh  volume_reader.h
optixInstancing/: CMakeLists.txt
optixInstancing/include/: params.hpp  rtxFunctions.hpp
optixInstancing/src/: optixInstancing.cpp  optixPrograms.cu  rtxFunctions.cpp
optixMaterials/include/: params.hpp  rtxFunctions.hpp
optixMaterials/src/: optixMaterials.cpp  optixPrograms.cu  rtxFunctions.cpp
optixMeshRefine/: CMakeLists.txt  camera.cu  optixMeshRefine.cpp
optixMeshRefine/include/: params.hpp  rtxFunctions.hpp
optixMeshRefine/src/: optixMeshRefine.cpp  optixPrograms.cu  rtxFunctions.cpp  thrust_reduce.cu
optixParticleCollision/: CMakeLists.txt  README.md  camera.cu  optixParticleCollision.cpp
optixParticleCollision/include/: Params.h  rtxFunctions.hpp  utils.h
optixParticleCollision/src/: optixParticleCollision.cpp  optixPrograms.cu  rtxFunctions.cpp
optixPolygonVisibility/: CMakeLists.txt
optixPolygonVisibility/include/: Params.h  rtxFunctions.hpp
optixPolygonVisibility/src/: optixPolygonVisibility.cpp  optixPrograms.cu  rtxFunctions.cpp  utils.cpp
optixProjection/: CMakeLists.txt  camera.cu  helpers.h  optixProjection.cpp
optixProjection/include/: params.hpp
optixProjection/src/: optixPrograms.cu  optixProjection.cpp  rtxFunctions.cpp
optixRayScattering/: CMakeLists.txt  optixRayScattering.cpp  optixRayScatteringPrograms.cu
optixRayScattering/include/: params.hpp  rtxFunctions.hpp
optixRayScattering/src/: optixPrograms.cu  rtxFunctions.cpp
optixRayScatteringInstancing/include/: maxBounce.h  params.hpp
optixRayScatteringInstancing/src/: optixInstancing.cpp  optixPrograms.cu  rtxFunctions.cpp
optixRayScatteringMaterials/: CMakeLists.txt
optixRayScatteringMaterials/include/: params.hpp
optixRayScatteringMaterials/src/: optixMaterials.cpp  optixPrograms.cu  rtxFunctions.cpp
optixSaxpy/: CMakeLists.txt  cuda.cu  kernels.cu  saxpy_optix.cpp
optixSaxpy/src/: kernels.cu  optixSaxpy.cpp  saxpy_kernel.cu
optixUniqPaths/: CMakeLists.txt  maxBounce.h  optixUniqPaths.cpp  optixUniqPathsPrograms.cu  thrustSortPaths.cu  thrustSortPaths.h
optixVolumeSampling/: CMakeLists.txt  camera.cu  optixVolumeSampling.cpp  volumereader.cpp  wavelet.txt
optixVolumeSampling/include/: params.hpp  rtxFunctions.hpp
optixVolumeSampling/src/: optixPrograms.cu  optixVolumeSampling.cpp  rtxFunctions.cpp
